--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=family=Pragati+Narrow:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
 	</head>
 	<body>
